Fix: Navbar covers title on shop category page

--- a/src/css/ShopCategory.css
+++ b/src/css/ShopCategory.css
@@ -3,7 +3,6 @@
 }
 
 .shop-category .title {
-  position: relative;
   font-family: "Akira Expanded";
   text-align: center;
   margin-top: 40px;
